--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,18 @@
       font-size: 18px;
       color: green;
     }
+
+    .ad-container {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 40px;
+    }
+
+    .ad-box {
+      display: inline-block;
+    }
   </style>
 </head>
 <body>
@@ -27,6 +39,70 @@
   <input type="text" id="userInput" placeholder="Type here" />
   <button onclick="sendText()">Submit</button>
   <div id="response"></div>
+
+  <!-- Ad Blocks -->
+  <div class="ad-container">
+    <!-- Ad 1 -->
+    <div class="ad-box">
+      <script type="text/javascript">
+        atOptions = {
+          'key': '0891eca24dfc7ca858fadd57d9e8317d',
+          'format': 'iframe',
+          'height': 600,
+          'width': 160,
+          'params': {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/0891eca24dfc7ca858fadd57d9e8317d/invoke.js"></script>
+    </div>
+
+    <!-- Ad 2 -->
+    <div class="ad-box">
+      <script type="text/javascript">
+        atOptions = {
+          'key': '5863f05890c1fc702d1a574efafd7609',
+          'format': 'iframe',
+          'height': 300,
+          'width': 160,
+          'params': {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/5863f05890c1fc702d1a574efafd7609/invoke.js"></script>
+    </div>
+
+    <!-- Ad 3 -->
+    <div class="ad-box">
+      <script type="text/javascript">
+        atOptions = {
+          'key': '720c7a097af332218fd3e0722a7d8404',
+          'format': 'iframe',
+          'height': 60,
+          'width': 468,
+          'params': {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/720c7a097af332218fd3e0722a7d8404/invoke.js"></script>
+    </div>
+
+    <!-- Ad 4 -->
+    <div class="ad-box">
+      <script type='text/javascript' src='//pl27293593.profitableratecpm.com/39/18/f5/3918f558255f21eb09c65c1b8acd9312.js'></script>
+    </div>
+
+    <!-- Ad 5 -->
+    <div class="ad-box">
+      <script type="text/javascript">
+        atOptions = {
+          'key': '58ed0b3a4065a38799321446b2b5b793',
+          'format': 'iframe',
+          'height': 50,
+          'width': 320,
+          'params': {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/58ed0b3a4065a38799321446b2b5b793/invoke.js"></script>
+    </div>
+  </div>
 
   <script>
     async function sendText() {
